# img_move_label

./: .gitignore  README.md  app.py  cutter_crop.py  main.py  pyproject.toml  requirements.txt
static/: detect.css  detect.js  master.css  styles.css  styles_bup.css
templates/: detect.html  upload_page.html  welcome.html
uploads/00/: IMG_0471.JPG539  IMG_7621.JPG418  Who Are WE.jpg95
uploads/2/: DSC03417.JPG286  DSC03455.JPG555  DSC03460.JPG552  DSC03466.JPG546  DSCN0761.JPG173  DSCN0762.JPG178  DSCN0763.JPG177  DSCN0765.JPG176  DSCN0767.JPG175  DSCN0768.JPG174  DSCN0769.JPG172  DSCN0770.JPG171  DSCN0772.JPG169  DSC_0087.JPG402  DSC_0091.JPG404  DSC_4283.JPG160  DSC_4291.JPG155  DSC_4294.JPG107  DSC_4294.JPG49  DSC_4297.JPG334  DSC_4301.JPG331  DSC_4305.JPG326  DSC_4308.JPG509  DSC_4309.JPG362  DSC_4322.JPG456  DSC_4322.JPG653  DSC_4350.JPG238  DSC_4350.JPG26  DSC_4358.JPG15  DSC_4358.JPG227  DSC_4363.JPG610  DSC_4367.JPG612  DSC_4371.JPG617  DSC_4375.JPG212  DSC_4378.JPG132  DSC_4382.JPG134  DSC_4467.JPG360  DSC_4471.JPG356  DSC_4475.JPG361  DSC_4704.JPG560  (+94 more)
uploads/4/: DSC03415.JPG281  DSC_4282.JPG163  DSC_4288.JPG157  DSC_4290.JPG159  DSC_4294.JPG328  DSC_4297.JPG54  DSC_4298.JPG333  DSC_4300.JPG332  DSC_4323.JPG4  DSC_4349.JPG228  DSC_4357.JPG229  DSC_4370.JPG613  DSC_4373.JPG133  DSC_4376.JPG220  DSC_4378.JPG31  IMG_0274.JPG400  IMG_0275.JPG386  IMG_0461.JPG101  IMG_0477.JPG531  IMG_0479.JPG537  IMG_0480.JPG523  IMG_0483.JPG538  IMG_0488.JPG533  IMG_1879.JPG239  IMG_1881.JPG251  IMG_1883.JPG244  IMG_1887.JPG246  (+14 more)
utils/: iou.py  process_multi_cutters.py
